# Gourmestre

./: .env  .gitignore  CHANGELOG.md  README.md  start_dev.sh
backend/: .env  Cargo.toml  init_db.sql
backend/migrations/: 001_create_tables.sql
backend/src/: api_docs.rs  config.rs  database.rs  error.rs  lib.rs  main.rs  models.rs
backend/src/domain/: autocomplete.rs  mod.rs  restaurant.rs  session.rs  user.rs  wishlist.rs
backend/src/handlers/: auth_handler.rs  autocomplete_handler.rs  health_handler.rs  mod.rs  restaurant_handler.rs  wishlist_handler.rs
backend/src/repositories/: mod.rs  restaurant_repository.rs  session_repository.rs  user_repository.rs  wishlist_repository.rs
backend/src/routes/: mod.rs
backend/src/services/: auth_service.rs  autocomplete_service.rs  mod.rs  restaurant_service.rs  user_service.rs  wishlist_service.rs
deploy/: README.md  deploy.sh  nginx-gourmestre.conf
docker/: .env.example  Dockerfile.backend  Dockerfile.frontend  README.Docker.md  docker-compose.prod.yml  docker-compose.yml  init.sql  nginx.conf
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/app/providers/: AppProviders.tsx  QueryProvider.tsx  index.ts
frontend/src/components/: AutocompleteInput.tsx  Dashboard.tsx  Landing.tsx  LazyComponents.tsx  Login.tsx  ProtectedRoute.tsx  Register.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Typography.tsx  index.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/features/: index.ts
frontend/src/features/dashboard/components/: LazyDashboardSections.tsx  index.ts
frontend/src/features/restaurants/components/: index.ts
frontend/src/features/restaurants/hooks/: index.ts  useRestaurantForm.ts  (+1 more)
frontend/src/hooks/: useUsers.ts
frontend/src/shared/api/: index.ts
frontend/src/shared/components/: FormError.tsx  LazyWrapper.tsx  MobileMenu.tsx  index.ts
frontend/src/shared/hooks/: useResponsive.ts
frontend/src/shared/validation/: schemas.ts
frontend/src/test/: setup.ts  utils.tsx
(+20 files in other folders)
